src/objects/PBS_Quiz__c.object
<CustomObject>
    <fields>
        <fullName>Delete_Responses_On_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Delete quiz response records after quiz submission</inlineHelpText>
        <label>Delete Responses on Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Learning__c</fullName>
        <label>Learning</label>
        <referenceTo>PBS_Learning__c</referenceTo>
        <relationshipName>Quizzes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Max_Attempts__c</fullName>
        <inlineHelpText>Maximum number of attempts to reach the passing score</inlineHelpText>
        <label>Max Attempts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passing_Score__c</fullName>
        <inlineHelpText>Number between 0 and 100 that will determine the minimum percentage of correct answers to get a passing score</inlineHelpText>
        <label>Passing Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Questions__c</fullName>
        <label>Total Questions</label>
        <summarizedField>PBS_Question_Line__c.Total_Questions__c</summarizedField>
        <summaryForeignKey>PBS_Question_Line__c.Quiz__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>PBS_Quiz</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Learning__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quiz Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PBS_Quizzes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>